# byetype

./: .gitignore  CONTRIBUTING.md  DESIGN-rust-ai-pipeline.md  LICENSE  README.md  bubble.html  generate_icons.py  index.html  package-lock.json  package.json  preview.html  screenshot.html  vite.config.ts  worker.html
.github/workflows/: release.yml
docs/: design-mockup.html
docs/plans/: 2026-04-24-screenshot-preview-prewarm-design.md  2026-04-24-screenshot-preview-prewarm-plan.md
docs/superpowers/plans/: 2026-03-18-rust-ai-pipeline.md
docs/superpowers/specs/: 2026-03-19-settings-menu-restructure-design.md  2026-03-19-thinking-bubble-design.md  2026-03-23-microphone-selection-design.md
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: agent.md  image-translate.md  rules.md  text-extract.md  text-optimize.md  vocabulary.md  voice-translate.md
src-tauri/src/: bubble.rs  clipboard.rs  commands.rs  debug_log.rs  lib.rs  main.rs  preview.rs  proxy.rs  screenshot_win32.rs  shortcut.rs  tray.rs  updater.rs
src-tauri/src/ai/: deepseek.rs  gemini.rs  longcat.rs  mimo.rs  mod.rs  models.rs  openai_compat.rs  prompt.rs  qwen.rs  retry.rs  types.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs
src-tauri/src/config/: migration.rs  mod.rs  types.rs
src-tauri/src/task/: history.rs  mod.rs
src/core/: base64.ts  history.ts  models.ts  optimize.ts  prompt-loader.ts  proxy-fetch.ts  retry.ts  task-manager.ts  transcribe.ts  types.ts
src/core/providers/: gemini.ts  openai-compat.ts  qwen-omni.ts  types.ts
src/lib/: tauri-api.ts
src/views/bubble/: main.ts
src/views/preview/: App.tsx
src/views/screenshot/: main.ts
src/views/settings/: App.tsx  index.css  theme.css
src/views/settings/components/: EditableLabel.tsx  PromptEditor.tsx  SettingGroup.tsx  SettingRow.tsx  Toggle.tsx
src/views/settings/tabs/: AboutTab.tsx  AdvancedTab.tsx  ExtractPromptsTab.tsx  ExtractTab.tsx  GeneralTab.tsx  HistoryTab.tsx  ModelsTab.tsx  OptimizeTab.tsx  PromptsTab.tsx  TranscribeTab.tsx  VoicePromptsTab.tsx
src/views/worker/: main.ts
