[package]
name = "byetype-tauri"
version = "1.0.0"
description = "ByeType - Markdown driven voice input"
authors = ["lishaojie"]
edition = "2021"

[lib]
name = "byetype_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
tauri-plugin-global-shortcut = "2"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
