[package]
name = "byetype"
version = "1.9.5"
description = "ByeType - Markdown driven voice input"
authors = ["lishaojie"]
edition = "2021"
license = "MIT"
repository = "https://github.com/lixiaojie001/byetype"
homepage = "https://github.com/lixiaojie001/byetype"

[lib]
name = "byetype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
cpal = "0.15"
base64 = "0.22"
flacenc = "0.4"
tauri-plugin-global-shortcut = "2"
arboard = "3"
enigo = "0.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["time", "macros", "process"] }
tokio-util = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
xcap = "0.9"
